experimenting with jekyll
moving drafts to unlinked area for easier review

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: minima
+
+header_pages:
+  - about.md
+  - index.md
+  - counterfactual/index_counterfactual.md
+  
+collections:
+  enigma:
+    output: true
