fix images paths

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,2 @@
+repo_name: /CounterfactualEstimator
 theme: minima
-
-header_pages:
-  - about.md
-  - index.md
-  - counterfactual/index_counterfactual.md
-  
-collections:
-  enigma:
-    output: true
